--- a/style/login.css
+++ b/style/login.css
@@ -23,12 +23,14 @@
 }
 
 #form #submit {
+	font-family: 'Lobster', cursive;
 	text-decoration: none;
 	margin-left: 110px;
 	background-color: #BEBFAF;
 	color: #3F403A;
 	border-radius: 50%;
 	padding: 10px;
+	font-size: 1.25em;
 }
 
 #form #submit:hover {
@@ -60,8 +62,4 @@
 #content li a:hover {
 	background-color: #3F403A;
 	color: #BEBFAF;
-}
-
-#logout, #tchat {
-	visibility: hidden;
 }
