--- a/style/t'chat.css
+++ b/style/t'chat.css
@@ -80,9 +80,15 @@
 	color: #3F403A;
 }
 
+#message .pseudo span {
+	color: #BEBFAF;
+}
+
 #message .pseudo {
 	width: 46%;
 	margin-left: 350px;
+	background-color: #3F403A;
+	color: #BEBFAF;
 }
 
 #message .other_user {
